# financeirokairo

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  package.yml
docs/: 00-indice.md  01-visao-geral.md  02-requisitos-funcionais.md  03-arquitetura.md  04-modelo-de-dados.md  05-importacao-json.md  06-categorizacao-e-aprendizado.md  07-interface-ux.md  08-relatorios-e-analises.md  09-seguranca-e-backup.md  10-roadmap.md  11-requisitos-nao-funcionais.md  12-guia-desenvolvimento.md  13-decisoes-arquiteturais.md  14-criterios-aceitacao-mvp.md  15-execucao-e-desenvolvimento.md  16-manual-do-usuario.md
examples/: compra-exemplo.json
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_recurring_expenses.py
packaging/: financeiro-kairo.desktop  financeiro-kairo.spec
src/financeiro_kairo/: __init__.py  cli.py  config.py
src/financeiro_kairo/application/: facade.py  schemas.py
src/financeiro_kairo/application/services/: backup.py  catalog.py  categories.py  finance.py  imports.py  planning.py  recurring_expenses.py  reports.py  sql_console.py
src/financeiro_kairo/domain/: models.py  planning_models.py  recurring_expenses.py
src/financeiro_kairo/infrastructure/database/: base.py  (+2 more)
src/financeiro_kairo/presentation/: app.py  main.py  recurring_expenses_page.py
tests/: conftest.py  test_categories_backup_facade.py  test_finance.py  test_imports.py  test_planning.py  test_presentation_smoke.py  test_recurring_expenses.py  test_recurring_expenses_ui.py  test_reports.py  test_sql_console_and_charts.py
