[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "financeiro-kairo"
version = "1.2.0"
description = "Aplicação desktop local de gestão financeira pessoal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "SQLAlchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "rapidfuzz>=3.9,<4.0",
  "PySide6>=6.7,<7.0",
  "pandas>=2.2,<3.0",
  "openpyxl>=3.1,<4.0",
  "reportlab>=4.2,<5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
]

[project.scripts]
financeiro-kairo = "financeiro_kairo.cli:main"
financeiro-kairo-desktop = "financeiro_kairo.presentation.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/financeiro_kairo"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --strict-markers --disable-warnings --cov=financeiro_kairo --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/financeiro_kairo/presentation/app.py" = ["F401", "I001"]
"src/financeiro_kairo/application/facade.py" = ["F401"]
"migrations/versions/*.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["financeiro_kairo"]
